recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:2: error: not found: value &&
	if(n==l.size)&&(n==0){
                     ^