recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
	if(n==l.size)&&(n==0){
		return Nil
	}
	else
		return nlast(l.tail, n-1)
}
